base/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: ivolve
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - port: 5000
      targetPort: 5000
